code monitoring: fix node color in dark mode (#17441)

--- a/client/web/src/enterprise/code-monitoring/CodeMonitoringNode.scss
+++ b/client/web/src/enterprise/code-monitoring/CodeMonitoringNode.scss
@@ -1,7 +1,7 @@
 .code-monitoring-node {
     // stylelint-disable-next-line declaration-property-unit-whitelist
     margin: -1px -1px calc(0.5rem - 1px) -1px;
-    color: initial;
+    color: var(--link-hover-color);
 
     &__toggle-wrapper {
         // stylelint-disable-next-line declaration-property-unit-whitelist
@@ -13,7 +13,7 @@
     }
 
     &:hover {
-        text-decoration: initial;
+        text-decoration: none;
         border: 2px solid #329af0;
         // stylelint-disable-next-line declaration-property-unit-whitelist
         margin: -2px -2px calc(0.5rem - 2px) -2px;
